[tool.poetry]
name = "Aria-Blaze-bot"
version = "0.1.0"
description = "NSFW Erotic Telegram AI Bot"
authors = ["Your Name <you@example.com>"]
**package-mode = false**  # ✅ Add this line

[tool.poetry.dependencies]
python = "3.11.9"
Flask = "*"
python-telegram-bot = "13.15"
gunicorn = "*"
requests = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

